<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.connorbowley.cs513_2.DiscountUserListActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/lblPrice"
        app:layout_constraintBottom_toTopOf="@+id/btnFindDiscount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDiscount_UserList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <Button
        android:id="@+id/btnFindDiscount"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/findDiscount"
        app:layout_constraintBottom_toTopOf="@+id/nestedScrollView5"
        app:layout_constraintEnd_toStartOf="@+id/btnBack_UserList"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnBack_UserList"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="@+id/btnFindDiscount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnFindDiscount"
        app:layout_constraintTop_toTopOf="@+id/btnFindDiscount" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView5"
        android:layout_width="304dp"
        android:layout_height="293dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFindDiscount">

        <LinearLayout
            android:id="@+id/linProductList_UserList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>
